projects/vb6parse/snapshots/parsers/cst/colon_separator/procedure_calls_colon_separated.snap
---
source: projects/vb6parse/tests/colon_separator.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: BeepKeyword
                  text: Beep
                - kind: Whitespace
                  text: " "
            - kind: ColonOperator
              text: ":"
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: " "
                - kind: BeepKeyword
                  text: Beep
                - kind: Whitespace
                  text: " "
            - kind: ColonOperator
              text: ":"
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: " "
                - kind: BeepKeyword
                  text: Beep
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
